--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Title</title>
-    <link rel="stylesheet" href="./node_modules/uikit/dist/css/uikit.css">
-    <link rel="stylesheet" href="./node_modules/pretty-checkbox.min.css">
+    <link rel="stylesheet" href="./node_modules/uikit/dist/css/uikit.min.css">
+    <link rel="stylesheet" href="./node_modules/pretty-checkbox/dist/pretty-checkbox.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -94,6 +94,7 @@
     </div>
 </div>
 <script src="./node_modules/uikit/dist/js/uikit.min.js"></script>
+<script src="./node_modules/pokeapi-js-wrapper/dist/index.js"></script>
 <script src="./index.js"></script>
 
 </body>
