removed stray td

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <td><b>Secondary type</b></td>
                     </tr>
                     </thead>
-                    <tbody id="pokemon-table"><tr><td>56</td>
+                    <tbody id="pokemon-table"><tr>
                     </tbody>
                 </table>
             </li>
