--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="uk-navbar-nav">
                 <li class="uk-navbar-item">
                     <form class="uk-search uk-search-default">
-                        <span uk-search-icon=class="uk-icon "></span>
+                        <span uk-search-icon=class="uk-icon"></span>
                         <label>
                             <input class="uk-search-input" type="search" placeholder="">
                         </label>
@@ -29,8 +29,8 @@
             </ul>
         </div>
     </nav>
-    <div class="pretty p-switch">
-        <input type="checkbox" id="sprites" name="sprites">
+    <div class="pretty p-switch p-fill">
+        <input type="checkbox"/>
         <div class="state">
             <label>Sprites</label>
         </div>
@@ -83,7 +83,8 @@
                         <td><b>Secondary type</b></td>
                     </tr>
                     </thead>
-                    <tbody id="pokemon-table"><tr>
+                    <tbody id="pokemon-table">
+                    <tr>
                     </tbody>
                 </table>
             </li>
