remove relative paths in scripts and links

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>Title</title>
-    <link rel="stylesheet" href="./node_modules/uikit/dist/css/uikit.min.css">
-    <link rel="stylesheet" href="./node_modules/pretty-checkbox/dist/pretty-checkbox.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="node_modules/uikit/dist/css/uikit.min.css">
+    <link rel="stylesheet" href="node_modules/pretty-checkbox/dist/pretty-checkbox.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="uk-container">
@@ -94,9 +94,9 @@
         </ul>
     </div>
 </div>
-<script src="./node_modules/uikit/dist/js/uikit.min.js"></script>
-<script src="./node_modules/pokeapi-js-wrapper/dist/index.js"></script>
-<script src="./index.js"></script>
+<script src="node_modules/uikit/dist/js/uikit.min.js"></script>
+<script src="node_modules/pokeapi-js-wrapper/dist/index.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
