readded id to checkbox

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <div class="pretty p-switch p-fill">
-        <input type="checkbox"/>
+        <input type="checkbox" name="sprite-checkbox" id="sprite-checkbox"/>
         <div class="state">
             <label>Sprites</label>
         </div>
